refactor(routingms): Command / Event / DTO クラスを Java record に変換して重複を除去
getter/setter ボイラープレートを record に置き換えることで重複行を 152 行から 0 行に削減。
重複率 8.5% → 0.0% 達成。呼び出し側の getXxx() を record アクセサ xxx() に統一した。